# ecu-map-studio

./: .gitattributes  .gitignore  CHANGELOG.md  ECUMapStudio.spec  LICENSE  README.md  app.py  build_exe.bat  pyproject.toml  requirements-dev.txt  requirements.txt  run_app.bat
.github/: release.yml
.github/release-notes/: v1.1.0.md  v1.2.0.md
.github/workflows/: release.yml  tests.yml
ecu_map_tool/: __init__.py  app.py  clipboard.py  curve.py  curve_widgets.py  curve_window.py  features.py  history.py  interpolation.py  main_window.py  model.py  project.py  smoothing.py  theme.py  visualization.py  widgets.py
packaging/: ECUMapStudio.iss  build_installers.ps1  build_user_manual.py  capture_manual_screenshots.py  generate_icon.py  prepare_release.ps1  version_info.txt
tests/: test_clipboard.py  test_curve.py  test_features.py  test_gui_smoke.py  test_interpolation.py  test_smoothing.py  test_workflow_features.py
tests/fixtures/: romraider_12x16_table.txt
