[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ecu-map-studio"
version = "1.2.0"
description = "Professional ECU map interpolation, extrapolation, and RomRaider clipboard tool"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["ECU", "RomRaider", "calibration", "interpolation", "extrapolation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "PyQt5>=5.15.10",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
build = [
    "Pillow>=10",
    "PyInstaller>=6",
]
manual = [
    "Pillow>=10",
    "reportlab>=4",
]

[project.gui-scripts]
ecu-map-studio = "ecu_map_tool.app:main"

[tool.setuptools.packages.find]
include = ["ecu_map_tool*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"packaging/capture_manual_screenshots.py" = ["E402"]
